--- a/views/editplayer.jade
+++ b/views/editplayer.jade
@@ -2,12 +2,11 @@ extends layout
 
 block content
     h1= title
-    form#formEditPlayer(name="editplayer",method="post",action="/players/#{playerid}")
-        input#inputPlayerID(type="number", name="playerid" hidden)
+    form#formEditPlayer(name="editplayer",method="post",action="/players/#{playerid}?_method=PUT")
         input#inputPlayerFirstName(type="text", placeholder="First Name", name="firstname" value="#{firstname}")
-        input#inputPlayerLastName(type="text", placeholder="Last Name", name="lastname")
-        input#inputPlayerNickname(type="text", placeholder="Nickname", name="nickname")
-        input#inputPlayerNumber(type="number", placeholder="Jersey Number", name="number")
-        input#inputPlayerPosition(type="text", placeholder="Position", name="position")
-        input#inputPlayerTeamID(type="number", placeholder="Team ID", name="teamid")
+        input#inputPlayerLastName(type="text", placeholder="Last Name", name="lastname" value="#{lastname}")
+        input#inputPlayerNickname(type="text", placeholder="Nickname", name="nickname" value="#{nickname}")
+        input#inputPlayerNumber(type="number", placeholder="Jersey Number", name="number" value="#{number}")
+        input#inputPlayerPosition(type="text", placeholder="Position", name="position" value="#{position}")
+        input#inputPlayerTeamID(type="number", placeholder="Team ID", name="teamid" value="#{teamid}")
         button#btnSubmit(type="submit") submit
