--- a/views/playerdetail.jade
+++ b/views/playerdetail.jade
@@ -3,6 +3,9 @@ extends layout
 block content
     h1 Player Detail
     
+    p.
+        #[a(href="/players") Back to Player List]
+    
     table(border="1")
         thead
             tr
