--- a/views/deleteplayer.jade
+++ b/views/deleteplayer.jade
@@ -5,3 +5,9 @@ block content
     p OK to delete Player #{playername} with ID #{playerid}?
     form#formDelelePlayer(name="deleteplayer", method="post", action="/players/#{playerid}?_method=DELETE")
         button#btnSubmit(type="submit") Delete
+    
+    button(onclick="cancelDelete()") Cancel
+    script.
+        function cancelDelete() {
+            window.location.href = '/players/#{playerid}'
+        }
