added links on home page

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,18 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  
+  p.
+    #[a(href="/leagues") Leagues]
+    
+    
+  p.
+    #[a(href="/teams") Teams]
+    
+  p.
+    #[a(href="/players") Players]
+  
+  p.
+    #[a(href="/goals") Goals]
+    
+    
