added link for adding new league, team, and player

--- a/views/leaguelist.jade
+++ b/views/leaguelist.jade
@@ -15,5 +15,5 @@ block content
                     td #[a(href="/leagues/#{item.LeagueID}") #{item.LeagueID}]
                     td #[a(href="/leagues/#{item.LeagueID}") #{item.LeagueName}]
                     td= item.Country
-                    
-    
+    p.
+        #[a(href="/leagues/new") Add New League]
