--- a/views/playerlist.jade
+++ b/views/playerlist.jade
@@ -17,5 +17,5 @@ block content
                     td #[a(href="/players/#{item.PlayerID}") #{item.FullName}]
                     td= item.Number
                     td #[a(href="/teams/#{item.TeamID}") #{item.TeamName}]
-                    
-    
+    p.
+        #[a(href="/players/new") Add New Player]
