--- a/views/teamlist.jade
+++ b/views/teamlist.jade
@@ -17,5 +17,7 @@ block content
                     td #[a(href="/teams/#{item.TeamID}") #{item.TeamName}]
                     td= item.City
                     td #[a(href="/leagues/#{item.LeagueID}") #{item.LeagueName}]
+    p.
+        #[a(href="/teams/new") Add New Team]
 
     
