--- a/views/teamdetail.jade
+++ b/views/teamdetail.jade
@@ -40,4 +40,4 @@ block content
                 tr
                     td #[a(href="/players/#{player.PlayerID}") #{player.PlayerID}]
                     td #[a(href="/players/#{player.PlayerID}") #{player.FullName}]
-                    td= team.City
+                    td= player.Number
